--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color:rgba(255, 0, 0, .4)">
 <img class="veverka" src="Snímek obrazovky 2022-11-02 130508.png" height="473" width="372"/>
 <img class="veverka" src="Snímek obrazovky 2022-11-02 130508.png" height="473" width="372"/>
 </body>
